objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PO_Sconto_Canone_Drop2__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_canone__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Canone Drop2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Canone_annuo_altriAnni__c</fullName>
        <label>Sconto Canone annuo %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Contributi_Attivaz_Backbone1__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_contributi_attivazione__c, 0)</formula>
        <label>Sconto Contributi Attivaz Backbone1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Contributi_Attivaz_Backbone2__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_contributi_attivazione__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributi Attivaz Backbone2 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Contributi_Attivaz_Drop1__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_contributi_attivazione__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributi Attivaz Drop1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Contributi_Attivaz_Drop2__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_contributi_attivazione__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributi Attivaz Drop2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_ContributoAttivaz_Colleg1anno2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_ContributoAttivaz_Colleg1anno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributo Attivazione %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_ContributoAttivaz_Colleg1anno__c</fullName>
        <label>Sconto Contributo Attivazione %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_ContributoAttivaz_Colleg2anno2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_ContributoAttivaz_Colleg2anno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributo Attivazione %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_ContributoAttivaz_altriAnni2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_ContributoAttivazione_altriAnn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Contributo Attivazione %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_ContributoAttivazione_altriAnn__c</fullName>
        <label>Sconto Contributo Attivazione %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Altri_Anni_1__c</fullName>
        <label>Sconto costi aggiuntivi altri anni %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Altri_Anni__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_Costi_Aggiuntivi_Altri_Anni_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto costi aggiuntivi altri anni %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno1_1__c</fullName>
        <label>Sconto costi aggiuntivi anno1 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno1__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_Costi_Aggiuntivi_Anno1_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto costi aggiuntivi anno1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno2_1__c</fullName>
        <label>Sconto costi aggiuntivi anno2 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_Costi_Aggiuntivi_Anno2_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto costi aggiuntivi anno2 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno3_1__c</fullName>
        <label>Sconto costi aggiuntivi anno3 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costi_Aggiuntivi_Anno3__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_Costi_Aggiuntivi_Anno3_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto costi aggiuntivi anno3 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costo_Totale_Canoni__c</fullName>
        <label>Sconto Costo Totale Canoni %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Costo_Totale_Contributi__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto Costo Totale Contributi %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Prezzo_Totale_IRU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto Prezzo Totale %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Prezzo_Totale__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto Prezzo Totale %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_canone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto canone %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_canone_collegamento__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_canone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto canone collegamento %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_canone_manutenzione__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto canone manutenzione %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_canone_manutenzione_collegam__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_canone_manutenzione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto canone manutenzione collegam %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_contrib_attivaz_collegamento__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_contributi_attivazione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto contrib. attivaz. collegamento %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_contributi_attivazione__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto contributi attivazione %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_corrispettivo_IRU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto corrispettivo IRU %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_corrispettivo_IRU_collegamento__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_corrispettivo_IRU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto corrispettivo IRU collegamento %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_costi_aggiuntivi__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto costi aggiuntivi %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_costi_aggiuntivi_collegamento__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_costi_aggiuntivi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto costi aggiuntivi collegamento %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_totale_valori_medi_annui__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto totale valori medi annui %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_totale_valori_medi_annui_copp__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sconto totale valori medi annui coppie %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_totali_valori_coppie_fino_2030__c</fullName>
        <label>Sconto totali valori coppie fino 2030</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_valore_coppia_fino_2030_coll__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_totali_valori_coppie_fino_2030__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto valore coppia fino 2030 colleg.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_valore_medio_annuo_colleg__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_totale_valori_medi_annui__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto valore medio annuo colleg.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_valore_medio_annuo_coppie_coll__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_totale_valori_medi_annui__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto valore medio annuo coppie colleg.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Special_Terms__c</fullName>
        <defaultValue>&quot;60 giorni data fattura mediante bonifico bancario;&quot; &amp; BR() &amp; &quot;I.V.A. esclusa, da applicare a norma di legge.&quot;</defaultValue>
        <label>Special Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_TotContributiAttivaAltriAnniScontati__c</fullName>
        <formula>PO_Totale_Contributi_Attiva_Altri_Anni__c - ((PO_Totale_Contributi_Attiva_Altri_Anni__c * PO_Sconto_ContributoAttivazione_altriAnn__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tot contributi attiv altri anni scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleCanoneAltreCoppie__c</fullName>
        <formula>PO_Canone_Drop2__c  + PO_Canone_Backbone1__c +  PO_Canone_Backbone2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Canone Altre Coppie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleContributiAttivaAnno1Scontati__c</fullName>
        <formula>PO_Totale_Contributi_Attiva_Anno1__c - ((PO_Totale_Contributi_Attiva_Anno1__c * PO_Sconto_ContributoAttivaz_Colleg1anno__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi attiva anno 1 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleContributiAttivaAnno2Scontati__c</fullName>
        <formula>PO_Totale_Contributi_Attiva_Anno2__c - (( PO_Totale_Contributi_Attiva_Anno2__c * PO_Sconto_ContributoAttivaz_Colleg2anno__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi attiva anno 2 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleContributiAttivaAnno3Scontati__c</fullName>
        <formula>PO_Totale_Contributi_Attiva_Anno3__c - ((PO_Totale_Contributi_Attiva_Anno3__c * PO_Sconto_ContributoAttivaz_Colleg3anno__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi attiva anno 3 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleCostiAggiuntiviAltriAnnoScontat__c</fullName>
        <formula>PO_Totale_Costi_Aggiuntivi_Altri_Anni__c - (( PO_Totale_Costi_Aggiuntivi_Altri_Anni__c * PO_Sconto_Costi_Aggiuntivi_Altri_Anni_1__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Costi Aggiun Altri Anni Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleCostiAggiuntiviAnno1Scontat__c</fullName>
        <formula>PO_Totale_Costi_Aggiuntivi_Anno1__c - ((PO_Totale_Costi_Aggiuntivi_Anno1__c * PO_Sconto_Costi_Aggiuntivi_Anno1_1__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Costi Aggiuntivi Anno 1 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleCostiAggiuntiviAnno1Scontati__c</fullName>
        <formula>PO_Totale_Costi_Aggiuntivi_Anno2__c - (( PO_Totale_Costi_Aggiuntivi_Anno2__c * PO_Sconto_Costi_Aggiuntivi_Anno2_1__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Costi Aggiuntivi Anno 2 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_TotaleCostiAggiuntiviAnno3Scontat__c</fullName>
        <formula>PO_Totale_Costi_Aggiuntivi_Anno3__c - ((PO_Totale_Costi_Aggiuntivi_Anno3__c * PO_Sconto_Costi_Aggiuntivi_Anno3_1__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Costi Aggiuntivi Anno 3 Scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_1_anno__c</fullName>
        <formula>PO_Canone_annuo_1anno__c + PO_Contributo_attivazione_1anno__c + PO_Costi_aggiuntivi_collegamento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale 1 anno</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_2_anni__c</fullName>
        <formula>PO_Canone_annuo_2anni__c + PO_Contributo_attivazione_2anni__c  +   PO_Costi_aggiuntivi_collegamento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale 2 anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_3_anni__c</fullName>
        <formula>PO_Canone_annuo_3anni__c + PO_Contributo_attivazione_3anni__c +  PO_Costi_aggiuntivi_collegamento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale 3 anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Altre_Coppie_Scontato__c</fullName>
        <formula>PO_Canone_Scontato_Drop2__c +  PO_Canone_Scontato_Backbone1__c +  PO_Canone_Scontato_Backbone2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Canone Altre Coppie Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Altri_Anni_Scontato__c</fullName>
        <formula>PO_Totale_Canone_Altri_Anni__c - (( PO_Totale_Canone_Altri_Anni__c * PO_Sconto_Canone_annuo_altriAnni__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Canone Altri Anni Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Altri_Anni__c</fullName>
        <label>Totale Canone Altri Anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno1_Scontato__c</fullName>
        <formula>PO_Totale_Canone_Anno1__c - ((PO_Totale_Canone_Anno1__c *  PO_ScontoCanone_annuo_Collegameno_1anno__c ) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale canone anno 1 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno1__c</fullName>
        <label>Totale Canone Anno 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno2_Scontato__c</fullName>
        <formula>PO_Totale_Canone_Anno2__c - (( PO_Totale_Canone_Anno2__c * PO_ScontoCanone_annuo_Collegameno_2anno__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale canone anno 2 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno2__c</fullName>
        <label>Totale Canone Anno 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno3_Scontato__c</fullName>
        <formula>PO_Totale_Canone_Anno3__c - (( PO_Totale_Canone_Anno3__c * PO_ScontoCanone_annuo_Collegameno_3anno__c) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale canone anno 3 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Anno3__c</fullName>
        <label>Totale Canone Anno 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone_Scontato_FLease__c</fullName>
        <formula>PO_Canone_Scontato_Drop1__c +  PO_Totale_Canone_Altre_Coppie_Scontato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Canone Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Canone__c</fullName>
        <formula>PO_Canone_Drop1__c +  PO_TotaleCanoneAltreCoppie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Canone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contr_Aggiu_Altre_CoppieSconta__c</fullName>
        <formula>PO_Contributo_Attivaz_Scontato_Drop2__c +  PO_Contributo_Attivaz_Scontato_Backbone1__c  +  PO_Contributo_Attivaz_Scontato_Backbone2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Contr Aggiu Altre Coppie Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attiva_Altri_Anni__c</fullName>
        <label>Totale contributi attiva altri anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attiva_Anno1__c</fullName>
        <label>Totale contributi attiva anno 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attiva_Anno2__c</fullName>
        <label>Totale contributi attiva anno 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attiva_Anno3__c</fullName>
        <label>Totale contributi attiva anno 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attivaz_AltreCoppie__c</fullName>
        <formula>PO_Contributo_Attivazione_Drop2__c +  PO_Contributo_Attivazione_Backbone1__c +  PO_Contributo_Attivazione_Backbone2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Contributi Attivaz Altre Coppie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_AttivazioneScontato__c</fullName>
        <formula>PO_Contributo_Attivaz_Scontato_Drop1__c +  PO_Totale_Contr_Aggiu_Altre_CoppieSconta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Contributi Attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Contributi_Attivazione_FLease__c</fullName>
        <formula>PO_Contributo_Attivazione_Drop1__c +  PO_Totale_Contributi_Attivaz_AltreCoppie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Contributi Attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Costi_Aggiuntivi_Altri_Anni__c</fullName>
        <label>Totale Costi Aggiuntivi Altri Anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Costi_Aggiuntivi_Anno1__c</fullName>
        <label>Totale Costi Aggiuntivi Anno 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Costi_Aggiuntivi_Anno2__c</fullName>
        <label>Totale Costi Aggiuntivi Anno 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_Costi_Aggiuntivi_Anno3__c</fullName>
        <label>Totale Costi Aggiuntivi Anno 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_canoni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale canoni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_canoni_manutenzione__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale canoni manutenzione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_canoni_manutenzione_scontato__c</fullName>
        <formula>PO_Totale_canoni_manutenzione__c - ((PO_Totale_canoni_manutenzione__c /100)* PO_Sconto_canone_manutenzione__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale canoni manutenzione scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_canoni_scontato__c</fullName>
        <formula>PO_Totale_canoni__c - ((PO_Totale_canoni__c/100)* PO_Sconto_canone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale canoni scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_attivazione__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale contributi attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_attivazione_scontat__c</fullName>
        <formula>PO_Totale_contributi_attivazione__c - ((PO_Totale_contributi_attivazione__c/100)* PO_Sconto_contributi_attivazione__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi attivazione scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_colleg_altri_ann__c</fullName>
        <formula>PO_Contributo_Attivaz_altri_anni_Scont2__c +  PO_Costi_Aggiuntivi_Altri_Anni_Scontati__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi colleg. altri anni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_collegamento_1_anno__c</fullName>
        <formula>PO_Contributo_annuo_Colleg1anno_Scontat2__c +  PO_Costi_Aggiuntivi_Anno1_Scontati__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi collegamento 1 anno</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_collegamento_2_anni__c</fullName>
        <formula>PO_Contributo_annuo_Colleg2anni_Scontat2__c +  PO_Costi_Aggiuntivi_Anno2_Scontati__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi collegamento 2 anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_contributi_collegamento_3_anni__c</fullName>
        <formula>PO_Contributo_annuo_Colleg3anni_Scontat2__c +  PO_Costi_Aggiuntivi_Anno3_Scontati__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale contributi collegamento 3 anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_corrispettivi_IRU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale corrispettivi IRU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_corrispettivi_IRU_scontati__c</fullName>
        <formula>PO_Totale_corrispettivi_IRU__c - ((PO_Totale_corrispettivi_IRU__c/100)* PO_Sconto_corrispettivo_IRU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale corrispettivi IRU scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_costi_aggiuntivi__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale costi aggiuntivi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_costi_aggiuntivi_scontati__c</fullName>
        <formula>PO_Totale_costi_aggiuntivi__c - ((PO_Totale_costi_aggiuntivi__c/100)* PO_Sconto_costi_aggiuntivi__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale costi aggiuntivi scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_scontat_valori_medi_altre_cop__c</fullName>
        <formula>PO_Totale_valori_medi_annui_altre_copp__c - ((PO_Totale_valori_medi_annui_altre_copp__c/ 100)* PO_Sconto_totale_valori_medi_annui_copp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale scontato valori medi altre copp.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_valori_fino_2030_scontato__c</fullName>
        <formula>PO_Totale_valori_prime_coppie_fino_2030__c - ((PO_Totale_valori_prime_coppie_fino_2030__c/100)* PO_Sconto_totali_valori_coppie_fino_2030__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale valori fino 2030 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_valori_medi_annui__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale valori medi annui</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_valori_medi_annui_altre_copp__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Totale valori medi annui altre coppie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_valori_medi_annui_scontato__c</fullName>
        <formula>PO_Totale_valori_medi_annui__c - ((PO_Totale_valori_medi_annui__c/100)* PO_Sconto_totale_valori_medi_annui__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale valori medi annui scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Totale_valori_prime_coppie_fino_2030__c</fullName>
        <label>Totale valori prime coppie fino 2030</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Val_medio_annuo_coll_coppie_scontato__c</fullName>
        <formula>PO_Valore_medio_annuo_altre_coppie__c - ((PO_Valore_medio_annuo_altre_coppie__c / 100 ) *  PO_Sconto_valore_medio_annuo_coppie_coll__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Val. medio annuo coll. coppie scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Valore_medio_annuo_altre_coppie__c</fullName>
        <label>Valore medio annuo altre coppie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Valore_medio_annuo_altre_coppie_scont__c</fullName>
        <formula>PO_Valore_medio_annuo_altre_coppie__c - ((PO_Valore_medio_annuo_altre_coppie__c/100)* PO_Sconto_valore_medio_annuo_coppie_coll__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valore medio annuo altre coppie scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Valore_medio_annuo_totale__c</fullName>
        <label>Valore medio annuo totale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Valore_medio_annuo_totale_coll_scont__c</fullName>
        <formula>PO_Valore_medio_annuo_totale__c - ((PO_Valore_medio_annuo_totale__c/100)* PO_Sconto_valore_medio_annuo_colleg__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valore medio annuo totale coll. scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>